[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/menu/WUUATIBLogo.jpg" type="Texture" id=1]
[ext_resource path="res://assets/menu/NewTitle.png" type="Texture" id=2]
[ext_resource path="res://assets/menu/GUIFrameBlue.png" type="Texture" id=3]
[ext_resource path="res://scripts/menu/MainUI.gd" type="Script" id=4]

[node name="MainUI" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 25.0
margin_top = 25.0
margin_right = 999.0
margin_bottom = 575.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 974.0
margin_bottom = 50.0
alignment = 2

[node name="Logo" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 874.0
margin_right = 974.0
margin_bottom = 50.0
texture = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 974.0
margin_bottom = 304.0

[node name="Title" type="TextureRect" parent="VBoxContainer/CenterContainer"]
margin_left = 212.0
margin_right = 762.0
margin_bottom = 250.0
rect_min_size = Vector2( 550, 250 )
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 308.0
margin_right = 974.0
margin_bottom = 538.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2"]
margin_left = 397.0
margin_right = 577.0
margin_bottom = 230.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_right = 180.0
margin_bottom = 70.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="TextureButton" parent="VBoxContainer/HBoxContainer2/VBoxContainer/CenterContainer"]
margin_right = 180.0
margin_bottom = 70.0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayLabel" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer/CenterContainer/Play"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Play"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 80.0
margin_right = 180.0
margin_bottom = 150.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Levels" type="TextureButton" parent="VBoxContainer/HBoxContainer2/VBoxContainer/CenterContainer2"]
margin_right = 180.0
margin_bottom = 70.0
texture_normal = ExtResource( 3 )

[node name="LevelsLabel" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer/CenterContainer2/Levels"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Levels"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer3" type="CenterContainer" parent="VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 160.0
margin_right = 180.0
margin_bottom = 230.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="TextureButton" parent="VBoxContainer/HBoxContainer2/VBoxContainer/CenterContainer3"]
margin_right = 180.0
margin_bottom = 70.0
texture_normal = ExtResource( 3 )

[node name="OptionsLabel" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer/CenterContainer3/Options"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Options"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/VBoxContainer/CenterContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/VBoxContainer/CenterContainer2/Levels" to="." method="_on_Levels_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/VBoxContainer/CenterContainer3/Options" to="." method="_on_Options_pressed"]
